[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/OutlineIcons/Outline.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Slots/InventorySlot.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/ToolTip.tscn" type="PackedScene" id=3]

[node name="1" type="TextureRect"]
anchor_right = 0.056
anchor_bottom = 0.1
margin_right = -1.92
margin_bottom = -2.0
rect_min_size = Vector2( 18, 18 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureButton" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 17.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 16 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
toolTip = ExtResource( 3 )
[connection signal="mouse_entered" from="Icon" to="Icon" method="_on_Icon_mouse_entered"]
[connection signal="mouse_exited" from="Icon" to="Icon" method="_on_Icon_mouse_exited"]
[connection signal="pressed" from="Icon" to="Icon" method="_on_Icon_pressed"]
